update benchmarks README with current benchmarks and SparklineProfiler usage